# CompilerPractice

./: .gitignore  AssignmentStatementExecutor.cpp  AssignmentStatementExecutor.h  AssignmentStatementParser.cpp  AssignmentStatementParser.h  Backend.cpp  Backend.h  CMakeLists.txt  CaseStatementParser.cpp  CaseStatementParser.h  Common.cpp  Common.h  Compiler.cpp  Compiler.h  CompoundStatementExecutor.cpp  CompoundStatementExecutor.h  CompoundStatementParser.cpp  CompoundStatementParser.h  ExpressionExecutor.cpp  ExpressionExecutor.h  ExpressionParser.cpp  ExpressionParser.h  ForStatementParser.cpp  ForStatementParser.h  Frontend.cpp  Frontend.h  IfStatementParser.cpp  IfStatementParser.h  Intermediate.cpp  Intermediate.h  IntermediateImpl.cpp  IntermediateImpl.h  Interpreter.cpp  Interpreter.h  LICENSE  Pascal.cpp  Pascal.h  PascalFrontend.cpp  PascalFrontend.h  README.md  (+10 more)
helper_scripts/: gen_cpp_code_reserved_words.py  reserved_words
src/: Backend.cpp  Backend.h  Common.cpp  Common.h  Compiler.cpp  Compiler.h  Frontend.cpp  Frontend.h  Intermediate.cpp  Intermediate.h  IntermediateImpl.cpp  IntermediateImpl.h  Interpreter.cpp  Interpreter.h  Pascal.cpp  Pascal.h  PascalFrontend.cpp  PascalFrontend.h  Predefined.cpp  Predefined.h  TypeChecker.cpp  TypeChecker.h  Utilities.cpp  Utilities.h  main.cpp
src/Executors/: AssignmentStatementExecutor.cpp  AssignmentStatementExecutor.h  CompoundStatementExecutor.cpp  CompoundStatementExecutor.h  ExpressionExecutor.cpp  ExpressionExecutor.h  IfExecutor.cpp  IfExecutor.h  LoopExecutor.cpp  LoopExecutor.h  SelectExecutor.cpp  SelectExecutor.h  StatementExecutor.cpp  StatementExecutor.h
src/Parsers/: ArrayTypeParser.cpp  ArrayTypeParser.h  AssignmentStatementParser.cpp  AssignmentStatementParser.h  BlockParser.cpp  BlockParser.h  CallParser.cpp  CallParser.h  CaseStatementParser.cpp  CaseStatementParser.h  CompoundStatementParser.cpp  CompoundStatementParser.h  ConstantDefinitionsParser.cpp  ConstantDefinitionsParser.h  DeclarationsParser.cpp  DeclarationsParser.h  DeclaredRoutineParser.cpp  DeclaredRoutineParser.h  EnumerationTypeParser.cpp  EnumerationTypeParser.h  ExpressionParser.cpp  ExpressionParser.h  ForStatementParser.cpp  ForStatementParser.h  IfStatementParser.cpp  IfStatementParser.h  ProgramParser.cpp  ProgramParser.h  RecordTypeParser.cpp  RecordTypeParser.h  RepeatStatementParser.cpp  RepeatStatementParser.h  SimpleTypeParser.cpp  SimpleTypeParser.h  StatementParser.cpp  StatementParser.h  SubrangeTypeParser.cpp  SubrangeTypeParser.h  TypeDefinitionsParser.cpp  TypeDefinitionsParser.h  (+8 more)
test_data/: assignments.txt.dot  block.txt.dot  case.txt.dot  caseerrors.txt.dot  controlsamples.txt.dot  for.txt.dot  forerrors.txt.dot  if.txt.dot  iferrors.txt.dot  loops.txt.dot  repeat.txt.dot  repeaterrors.txt.dot  routines_mem_leak.pas  while.txt.dot
